--- a/Basics/Form/package.json
+++ b/Basics/Form/package.json
@@ -12,5 +12,8 @@
   "license": "ISC",
   "devDependencies": {
     "nodemon": "^2.0.20"
+  },
+  "dependencies": {
+    "body-parser": "^1.20.1"
   }
 }
